<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newcontact.NewFragment">

    <TextView
        android:id="@+id/tvTitleNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_new"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="@font/tenor_sans"/>

    <ImageView
        android:id="@+id/ivNew"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/photocamera"
        android:translationY="100dp" />

    <TextView
        android:id="@+id/tvNewPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/tenor_sans"
        android:text="@string/add_contact_photo"
        android:textStyle="bold"
        android:translationY="190dp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:fontFamily="@font/tenor_sans"
        android:hint="@string/hint_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textStyle="bold"
        android:translationY="240dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:fontFamily="@font/tenor_sans"
        android:hint="@string/hint_surname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textStyle="bold"
        android:translationY="300dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:fontFamily="@font/tenor_sans"
        android:hint="@string/hint_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textStyle="bold"
        android:translationY="360dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:fontFamily="@font/tenor_sans"
        android:hint="@string/hint_phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:textStyle="bold"
        android:translationY="420dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/tenor_sans"
        android:text="@string/btn_create"
        android:textStyle="bold"
        android:translationY="520dp" />
</RelativeLayout>