<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list">

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.agenda.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_new"
        android:name="com.example.agenda.ui.newcontact.NewFragment"
        android:label="@string/title_new"
        tools:layout="@layout/fragment_new" />

    <fragment
        android:id="@+id/navigation_update"
        android:name="com.example.agenda.ui.update.UpdateFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_update" />
    <fragment
        android:id="@+id/navigation_del"
        android:name="com.example.agenda.ui.delete.DelFragment"
        android:label="fragment_del"
        tools:layout="@layout/fragment_del" />
</navigation>